updates for 1.13.0, removing the Aliasable interface.
Also allowing the UI (title, icon, CSS) of the Alias to be finetuned.
Also, changing 'AliasableLink' to 'AliasLink'; 'aliasable' to 'aliased'