@@ -2,28 +2,28 @@ package org.incode.module.alias.fixture.dom.apptenancy;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.Lists;
 
 import org.apache.isis.applib.annotation.DomainService;
 import org.apache.isis.applib.annotation.NatureOfService;
 
-import org.incode.module.alias.dom.api.aliasable.Aliasable;
 import org.incode.module.alias.dom.spi.aliastype.ApplicationTenancyRepository;
 
+/**
+ * Mandatory implementation of the {@link ApplicationTenancyRepository} SPI.
+ */
 @DomainService(
     nature = NatureOfService.DOMAIN
 )
 public class ApplicationTenancyDemoEnumRepository implements ApplicationTenancyRepository {
 
     @Override
-    public Collection<String> atPathsFor(final Aliasable aliasable) {
+    public Collection<String> atPathsFor(final Object aliased) {
         return Lists.newArrayList(
-                FluentIterable
-                .from(Arrays.asList(ApplicationTenancyDemoEnum.values()))
-                .transform(ApplicationTenancyDemoEnum::getPath)
-                .toList()
+                Arrays.stream(ApplicationTenancyDemoEnum.values()).map(ApplicationTenancyDemoEnum::getPath)
+                        .collect(Collectors.toList())
         );
     }
 }
